package mpb;

// 请求结果通知
message GM_Common {
  required int32 Result = 1; // 通知类型
  repeated string Params = 2;
}

// 请求登录
message GM_LoginReq {
  required string Account = 1;
  required string Password = 2;
}

// 响应登录
message GM_LoginResp {
  required int32 ID = 1; // 玩家ID
  optional int32 Status = 2; // 0-服务正常 1-服务暂停
}